beginning to the content provider construction Creation of the class + onCreate Registering in the manifest Defining URI's Add to the contract

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
                 android:value=".MainActivity" />
         </activity>
 
+        <provider
+            android:authorities="com.example.android.popularmovies1"
+            android:name="com.example.android.popularmovies1.data.MoviesContentProvider"
+            android:exported="false" />
+
     </application>
 
 </manifest>
